--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,179 +31,96 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-
-    #server {
-    #    listen       80;
-    #    server_name  localhost;
-
-    #    #charset koi8-r;
-
-    #    #access_log  logs/host.access.log  main;
-
-    #    location / {
-    #        root   /usr/share/nginx/html;
-    #        index  index.html index.htm;
-    #    }
+    ssl_session_cache   shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_certificate     /home/b3nj4m1n/self-hosted/certificates/localhost.crt;
+    ssl_certificate_key /home/b3nj4m1n/self-hosted/certificates/localhost.key;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
 
     #    #error_page  404              /404.html;
 
-    #    # redirect server error pages to the static page /50x.html
-    #    #
-    #    error_page   500 502 503 504  /50x.html;
-    #    location = /50x.html {
-    #        root   /usr/share/nginx/html;
-    #    }
-
-    #    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #    #
-    #    #location ~ \.php$ {
-    #    #    proxy_pass   http://127.0.0.1;
-    #    #}
-
-    #    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #    #
-    #    #location ~ \.php$ {
-    #    #    root           html;
-    #    #    fastcgi_pass   127.0.0.1:9000;
-    #    #    fastcgi_index  index.php;
-    #    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    #    include        fastcgi_params;
-    #    #}
-
-    #    # deny access to .htaccess files, if Apache's document root
-    #    # concurs with nginx's one
-    #    #
-    #    #location ~ /\.ht {
-    #    #    deny  all;
-    #    #}
-    #}
-
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
-
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
-
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
     server {
-	    listen 80;
-	    server_name localhost;
-
-	    location / {
-		    proxy_pass http://localhost:9999;
-	    }   
-    }
-
-
-    server {
-	    listen 80;
-	    server_name gitea.home.com;
-
-	    location / {
-		    proxy_pass http://localhost:3000;
-	    }   
-    }
-
-    server {
-	    listen 80;
-	    server_name miniflux.home.com;
-
-	    location / {
-		    proxy_pass http://localhost:4000;
-	    }   
-    }
-
-    server {
-	    listen 80;
-	    server_name hastebin.home.com;
-
-	    location / {
-		    proxy_pass http://localhost:5000;
-	    }   
-    }
-
-    server {
-	    listen 80;
-	    server_name wallabag.home.com;
-
-	    location / {
-		    proxy_pass http://localhost:7000;
-	    }   
-    }
-
-    server {
-	    listen 80;
-	    server_name ackee.home.com;
-
-	    location / {
-		    proxy_pass http://localhost:5398;
-	    }   
-    }
-
-    server {
-	    listen 80;
-	    server_name jellyfin.home.com;
-
-	    location / {
-		    proxy_pass http://localhost:2893;
-	    }   
-    }
-
-    server {
-	    listen 80;
-	    server_name cyberchef.home.com;
-
-	    location / {
-		    proxy_pass http://localhost:3272;
-	    }   
-    }
-
-    server {
-	    listen 80;
-	    server_name dispatch.home.com;
-
-	    location / {
-		    proxy_pass http://localhost:7219;
-	    }   
-    }
-
-    server {
-	    listen 80;
+	    listen 443 ssl;
 	    server_name home.com;
 
 	    location / {
 		    proxy_pass http://localhost:9999;
 	    }   
     }
+
+    server {
+            listen 443 ssl;
+            server_name gitea.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:3000;
+            }   
+    }
+
+    server {
+            listen 443 ssl;
+            server_name miniflux.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:4000;
+            }   
+    }
+
+    server {
+            listen 443 ssl;
+            server_name hastebin.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:5000;
+            }   
+    }
+
+    server {
+            listen 443 ssl;
+            server_name wallabag.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:7000;
+            }   
+    }
+
+    server {
+            listen 443 ssl;
+            server_name ackee.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:5398;
+            }   
+    }
+
+    server {
+            listen 443 ssl;
+            server_name jellyfin.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:2893;
+            }   
+    }
+
+    server {
+            listen 443 ssl;
+            server_name cyberchef.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:3272;
+            }   
+    }
+
+    server {
+            listen 443 ssl;
+            server_name dispatch.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:7219;
+            }   
+    }
+
 
 }
 
