Update nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -121,6 +121,20 @@ http {
             }   
     }
 
+    server {
+            listen 443 ssl;
+            server_name nextcloud.home.com;
 
+            location / {
+        	    proxy_pass http://localhost:8663;
+            }   
+    }
+    server {
+	    listen 3001 ssl;
+	    server_name _;
+            location / {
+        	    proxy_pass http://localhost:8663;
+            }   
+    }
 }
 
