--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 
-#user html;
+#user nginx;
 worker_processes  1;
 
 #error_log  logs/error.log;
@@ -41,99 +41,99 @@ http {
     #    #error_page  404              /404.html;
 
     server {
+	    listen 80 default_server;
+	    listen [::]:80 default_server;
+	    server_name _;
+	    return 301 https://$host$request_uri;
+    }
+
+    server {
 	    listen 443 ssl;
-	    server_name home.com;
+	    server_name _;
+	    root /www/data;
 
 	    location / {
-		    proxy_pass http://localhost:9999;
 	    }   
     }
 
-    server {
-            listen 443 ssl;
-            server_name gitea.home.com;
-
-            location / {
-        	    proxy_pass http://localhost:3000;
-            }   
-    }
-
-    server {
-            listen 443 ssl;
-            server_name miniflux.home.com;
-
-            location / {
-        	    proxy_pass http://localhost:4000;
-            }   
-    }
-
-    server {
-            listen 443 ssl;
-            server_name hastebin.home.com;
-
-            location / {
-        	    proxy_pass http://localhost:5000;
-            }   
-    }
-
-    server {
-            listen 443 ssl;
-            server_name wallabag.home.com;
-
-            location / {
-        	    proxy_pass http://localhost:7000;
-            }   
-    }
-
-    server {
-            listen 443 ssl;
-            server_name ackee.home.com;
-
-            location / {
-        	    proxy_pass http://localhost:5398;
-            }   
-    }
 
     server {
             listen 443 ssl;
             server_name jellyfin.home.com;
 
             location / {
-        	    proxy_pass http://localhost:2893;
+        	    proxy_pass http://localhost:30006;
             }   
     }
-
-    server {
-            listen 443 ssl;
-            server_name cyberchef.home.com;
-
-            location / {
-        	    proxy_pass http://localhost:3272;
-            }   
-    }
-
-    server {
-            listen 443 ssl;
-            server_name dispatch.home.com;
-
-            location / {
-        	    proxy_pass http://localhost:7219;
-            }   
-    }
-
     server {
             listen 443 ssl;
             server_name nextcloud.home.com;
 
             location / {
-        	    proxy_pass http://localhost:8663;
+        	    proxy_pass http://localhost:30007;
             }   
     }
     server {
-	    listen 3001 ssl;
-	    server_name _;
+            listen 6557 ssl;
+            server_name _;
             location / {
-        	    proxy_pass http://localhost:8663;
+        	    proxy_pass http://localhost:30007;
+            }   
+    }
+    server {
+            listen 443 ssl;
+            server_name gitea.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:30008;
+            }   
+    }
+    server {
+            listen 443 ssl;
+            server_name miniflux.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:30009;
+            }   
+    }
+    server {
+            listen 443 ssl;
+            server_name hastebin.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:30010;
+            }   
+    }
+    server {
+            listen 443 ssl;
+            server_name wallabag.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:30011;
+            }   
+    }
+    server {
+            listen 443 ssl;
+            server_name cyberchef.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:30012;
+            }   
+    }
+    server {
+            listen 443 ssl;
+            server_name ackee.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:30013;
+            }   
+    }
+    server {
+            listen 443 ssl;
+            server_name dispatch.home.com;
+
+            location / {
+        	    proxy_pass http://localhost:30014;
             }   
     }
 }
