Update for raspberry pi

--- a/bind/named.conf
+++ b/bind/named.conf
@@ -2,13 +2,23 @@ acl homenetwork {
 	localhost;
 	localnets;
 	192.168.192.0/24;
+    192.168.178.0/24;
 };
 
 options {
     directory "/var/named";
     pid-file "/run/named/named.pid";
 
+    // Uncomment these to enable IPv6 connections support
+    // IPv4 will still work:
+    //  listen-on-v6 { any; };
+    // Add this for no IPv4:
+    //  listen-on { none; };
+
 	recursion yes;
+    //allow-recursion { 127.0.0.1; };
+    //allow-transfer { none; };
+    //allow-update { none; };
     allow-query { homenetwork; };
 
     version none;
@@ -16,23 +26,23 @@ options {
     server-id none;
 };
 
-zone "localhost" IN {
-    type master;
-    file "localhost.zone";
-};
+# zone "localhost" IN {
+#     type master;
+#     file "localhost.zone";
+# };
+# 
+# zone "0.0.127.in-addr.arpa" IN {
+#     type master;
+#     file "127.0.0.zone";
+# };
+# 
+# zone "1.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.ip6.arpa" {
+#     type master;
+#     file "localhost.ip6.zone";
+# };
 
-zone "0.0.127.in-addr.arpa" IN {
-    type master;
-    file "127.0.0.zone";
-};
-
-zone "1.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.ip6.arpa" {
-    type master;
-    file "localhost.ip6.zone";
-};
 
 zone "home.com" {
 	type master;
-	file "/var/named/home.com.hosts";
+	file "/var/lib/bind/home.com.hosts";
 	};
-
