--- a/docker-compose/cyberchef/docker-compose.yaml
+++ b/docker-compose/cyberchef/docker-compose.yaml
@@ -2,7 +2,8 @@ version: "3"
 
 services:
   cyberchef:
-    image: mpepping/cyberchef
-    restart: always
-    ports:
-      - "30012:8000"
+      image: suika/cyberchef
+      container_name: cyberchef
+      restart: always
+      ports:
+          - "30012:80"
