--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,131 +10,143 @@ worker_processes  1;
 
 
 events {
-    worker_connections  1024;
+	worker_connections  1024;
 }
 
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+	include       mime.types;
+	default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+#log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+#                  '$status $body_bytes_sent "$http_referer" '
+#                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+#access_log  logs/access.log  main;
 
-    sendfile        on;
-    #tcp_nopush     on;
+	sendfile        on;
+#tcp_nopush     on;
 
-    #keepalive_timeout  0;
-    keepalive_timeout  65;
+#keepalive_timeout  0;
+	keepalive_timeout  65;
 
-    #gzip  on;
-    ssl_session_cache   shared:SSL:10m;
-    ssl_session_timeout 10m;
-    ssl_certificate     /home/b3nj4m1n/self-hosted/certificates/localhost.crt;
-    ssl_certificate_key /home/b3nj4m1n/self-hosted/certificates/localhost.key;
-    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
+#gzip  on;
+	ssl_session_cache   shared:SSL:10m;
+	ssl_session_timeout 10m;
+	ssl_certificate     /home/b3nj4m1n/www/certificates/localhost.crt;
+	ssl_certificate_key /home/b3nj4m1n/www/certificates/localhost.key;
+	ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+	ssl_ciphers         HIGH:!aNULL:!MD5;
 
-    #    #error_page  404              /404.html;
+#    #error_page  404              /404.html;
 
-    server {
-	    listen 80 default_server;
-	    listen [::]:80 default_server;
-	    server_name _;
-	    return 301 https://$host$request_uri;
-    }
+	server {
+		listen 80 default_server;
+		listen [::]:80 default_server;
+		server_name _;
+		return 301 https://$host$request_uri;
+	}
 
-    server {
-	    listen 443 ssl;
-	    server_name _;
-	    root /www/data;
+	server {
+		listen 443 ssl;
+		server_name _;
+		root /www/data;
 
-	    location / {
-	    }   
-    }
+		location / {
+		}   
+	}
 
 
-    server {
-            listen 443 ssl;
-            server_name jellyfin.home.com;
+	server {
+		listen 443 ssl;
+		server_name jellyfin.home.com;
 
-            location / {
-        	    proxy_pass http://localhost:30006;
-            }   
-    }
-    server {
-            listen 443 ssl;
-            server_name nextcloud.home.com;
+		location / {
+			proxy_pass http://localhost:30006;
+		}   
+	}
+	server {
+		listen 443 ssl;
+		server_name nextcloud.home.com;
 
-            location / {
-        	    proxy_pass http://localhost:30007;
-            }   
-    }
-    server {
-            listen 6557 ssl;
-            server_name _;
-            location / {
-        	    proxy_pass http://localhost:30007;
-            }   
-    }
-    server {
-            listen 443 ssl;
-            server_name gitea.home.com;
+		location / {
+			proxy_pass http://localhost:30007;
+		}   
+	}
+	server {
+		listen 6557 ssl;
+		server_name _;
+		location / {
+			proxy_pass http://localhost:30007;
+		}   
+	}
+	server {
+		listen 443 ssl;
+		server_name gitea.home.com;
 
-            location / {
-        	    proxy_pass http://localhost:30008;
-            }   
-    }
-    server {
-            listen 443 ssl;
-            server_name miniflux.home.com;
+		location / {
+			proxy_pass http://localhost:30008;
+		}   
+	}
+	server {
+		listen 443 ssl;
+		server_name miniflux.home.com;
 
-            location / {
-        	    proxy_pass http://localhost:30009;
-            }   
-    }
-    server {
-            listen 443 ssl;
-            server_name hastebin.home.com;
+		location / {
+			proxy_pass http://localhost:30009;
+		}   
+	}
+	server {
+		listen 443 ssl;
+		server_name hastebin.home.com;
 
-            location / {
-        	    proxy_pass http://localhost:30010;
-            }   
-    }
-    server {
-            listen 443 ssl;
-            server_name wallabag.home.com;
+		location / {
+			proxy_pass http://localhost:30010;
+		}   
+	}
+	server {
+		listen 443 ssl;
+		server_name wallabag.home.com;
 
-            location / {
-        	    proxy_pass http://localhost:30011;
-            }   
-    }
-    server {
-            listen 443 ssl;
-            server_name cyberchef.home.com;
+		location / {
+			proxy_pass http://localhost:30011;
+		}   
+	}
+	server {
+		listen 443 ssl;
+		server_name cyberchef.home.com;
 
-            location / {
-        	    proxy_pass http://localhost:30012;
-            }   
-    }
-    server {
-            listen 443 ssl;
-            server_name ackee.home.com;
+		location / {
+			proxy_pass http://localhost:30012;
+		}   
+	}
+	server {
+		listen 443 ssl;
+		server_name matomo.home.com;
 
-            location / {
-        	    proxy_pass http://localhost:30013;
-            }   
-    }
-    server {
-            listen 443 ssl;
-            server_name dispatch.home.com;
+		location / {
+			proxy_pass_request_headers      on;
+			proxy_pass http://localhost:30013;
+		}   
+	}
+	server {
+		listen 443 ssl;
+		server_name dispatch.home.com;
 
-            location / {
-        	    proxy_pass http://localhost:30014;
-            }   
-    }
+		location / {
+			proxy_pass http://localhost:30014;
+		}   
+	}
+	server {
+		listen 443 ssl;
+		server_name syncthing.home.com;
+
+		location / {
+			proxy_pass http://localhost:8384;
+		}   
+	}
+
+
+
 }
 
