--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -125,7 +125,7 @@ http {
 		server_name matomo.home.com;
 
 		location / {
-			proxy_pass_request_headers      on;
+			proxy_set_header Host $host;
 			proxy_pass http://localhost:30013;
 		}   
 	}
