--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -139,14 +139,11 @@ http {
 	}
 	server {
 		listen 443 ssl;
-		server_name syncthing.home.com;
+		server_name bitwarden.home.com;
 
 		location / {
-			proxy_pass http://localhost:8384;
+			proxy_pass http://localhost:30015;
 		}   
 	}
-
-
-
 }
 
