Added ssl bridges to nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,6 +66,13 @@ http {
 		}   
 	}
 	server {
+		listen 29171 ssl;
+		server_name _;
+		location / {
+			proxy_pass http://localhost:30006;
+		}   
+	}
+	server {
 		listen 443 ssl;
 		server_name nextcloud.home.com;
 
@@ -74,7 +81,7 @@ http {
 		}   
 	}
 	server {
-		listen 6557 ssl;
+		listen 29172 ssl;
 		server_name _;
 		location / {
 			proxy_pass http://localhost:30007;
@@ -89,6 +96,13 @@ http {
 		}   
 	}
 	server {
+		listen 29173 ssl;
+		server_name _;
+		location / {
+			proxy_pass http://localhost:30008;
+		}   
+	}
+	server {
 		listen 443 ssl;
 		server_name miniflux.home.com;
 
@@ -97,25 +111,23 @@ http {
 		}   
 	}
 	server {
-		listen 443 ssl;
-		server_name hastebin.home.com;
-
+		listen 29174 ssl;
+		server_name _;
 		location / {
-			proxy_pass http://localhost:30010;
-		}   
-	}
-	server {
-		listen 443 ssl;
-		server_name wallabag.home.com;
-
-		location / {
-			proxy_pass http://localhost:30011;
+			proxy_pass http://localhost:30009;
 		}   
 	}
 	server {
 		listen 443 ssl;
 		server_name cyberchef.home.com;
 
+		location / {
+			proxy_pass http://localhost:30012;
+		}   
+	}
+	server {
+		listen 29177 ssl;
+		server_name _;
 		location / {
 			proxy_pass http://localhost:30012;
 		}   
@@ -130,6 +142,13 @@ http {
 		}   
 	}
 	server {
+		listen 29178 ssl;
+		server_name _;
+		location / {
+			proxy_pass http://localhost:30013;
+		}   
+	}
+	server {
 		listen 443 ssl;
 		server_name dispatch.home.com;
 
@@ -138,9 +157,23 @@ http {
 		}   
 	}
 	server {
+		listen 29179 ssl;
+		server_name _;
+		location / {
+			proxy_pass http://localhost:30014;
+		}   
+	}
+	server {
 		listen 443 ssl;
 		server_name bitwarden.home.com;
 
+		location / {
+			proxy_pass http://localhost:30015;
+		}   
+	}
+	server {
+		listen 29180 ssl;
+		server_name _;
 		location / {
 			proxy_pass http://localhost:30015;
 		}   
