--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -178,5 +178,20 @@ http {
 			proxy_pass http://localhost:30015;
 		}   
 	}
+	server {
+		listen 443 ssl;
+		server_name lex.home.com;
+
+		location / {
+			proxy_pass http://localhost:30016;
+		}   
+	}
+	server {
+		listen 29181 ssl;
+		server_name _;
+		location / {
+			proxy_pass http://localhost:30016;
+		}   
+	}
 }
 
