Hastebin is back

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -119,6 +119,21 @@ http {
 	}
 	server {
 		listen 443 ssl;
+		server_name hastebin.home.com;
+
+		location / {
+			proxy_pass http://localhost:30010;
+		}   
+	}
+	server {
+		listen 29175 ssl;
+		server_name _;
+		location / {
+			proxy_pass http://localhost:30010;
+		}   
+	}
+	server {
+		listen 443 ssl;
 		server_name cyberchef.home.com;
 
 		location / {
