--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -208,5 +208,20 @@ http {
 			proxy_pass http://localhost:30016;
 		}   
 	}
+	server {
+		listen 443 ssl;
+		server_name booksonic.home.com;
+
+		location / {
+			proxy_pass http://localhost:30017;
+		}   
+	}
+	server {
+		listen 29182 ssl;
+		server_name _;
+		location / {
+			proxy_pass http://localhost:30017;
+		}   
+	}
 }
 
