--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -223,5 +223,20 @@ http {
 			proxy_pass http://localhost:30017;
 		}   
 	}
+	server {
+		listen 443 ssl;
+		server_name jenkins.home.com;
+
+		location / {
+			proxy_pass http://localhost:30018;
+		}   
+	}
+	server {
+		listen 29183 ssl;
+		server_name _;
+		location / {
+			proxy_pass http://localhost:30018;
+		}   
+	}
 }
 
