--- a/playbooks/bash.yml
+++ b/playbooks/bash.yml
@@ -1,12 +1,15 @@
 ---
 - name: Ensure dotfiles
   ansible.builtin.import_playbook: dotfiles.yml
+  when: hostvars[inventory_hostname]["ran_playbook_dotfiles"] is undefined
 
 - name: Ensure shrc
   ansible.builtin.import_playbook: shrc.yml
+  when: hostvars[inventory_hostname]["ran_playbook_shrc"] is undefined
 
 - name: Ensure shell utils
   ansible.builtin.import_playbook: shell_utils.yml
+  when: hostvars[inventory_hostname]["ran_playbook_shell_utils"] is undefined
 
 - name: bash
   hosts: vm
@@ -23,3 +26,6 @@
       src: /dotfiles/files/bash/.bashrc
       dest: ~/.bashrc
       remote_src: true
+  - name: Set done variable
+    ansible.builtin.set_fact:
+      ran_playbook_bash: true
