--- a/playbooks/shrc.yml
+++ b/playbooks/shrc.yml
@@ -11,3 +11,6 @@
       src: /dotfiles/files/shrc/shrc.sh
       dest: ~/.config/shrc
       remote_src: true
+  - name: Set done variable
+    ansible.builtin.set_fact:
+      ran_playbook_shrc: true
