--- a/playbooks/ufw.yml
+++ b/playbooks/ufw.yml
@@ -24,3 +24,6 @@
     community.general.ufw:
       rule: allow
       name: OpenSSH
+  - name: Set done variable
+    ansible.builtin.set_fact:
+      ran_playbook_ufw: true
